--- a/package.json
+++ b/package.json
@@ -52,7 +52,8 @@
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.10",
     "swiper": "^11.2.6",
-    "uuid": "^11.0.5"
+    "uuid": "^11.0.5",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
