--- a/package.json
+++ b/package.json
@@ -17,21 +17,13 @@
     "@supabase/supabase-js": "^2.48.1",
     "@tanstack/react-query": "^5.66.0",
     "@tanstack/react-query-devtools": "^5.66.0",
-    "@tiptap/extension-code-block": "^2.11.5",
-    "@tiptap/extension-color": "^2.11.5",
-    "@tiptap/extension-highlight": "^2.11.5",
-    "@tiptap/extension-link": "^2.11.5",
-    "@tiptap/extension-list-item": "^2.11.5",
-    "@tiptap/extension-table": "^2.11.5",
-    "@tiptap/extension-text-align": "^2.11.5",
-    "@tiptap/extension-text-style": "^2.11.5",
-    "@tiptap/extension-underline": "^2.11.5",
     "@tiptap/react": "^2.11.5",
     "@tiptap/starter-kit": "^2.11.5",
     "date-fns": "^4.1.0",
     "dompurify": "^3.2.4",
     "dotenv": "^16.4.7",
     "franc": "^6.2.0",
+    "interactjs": "^1.10.27",
     "langs": "^2.0.0",
     "lodash": "^4.17.21",
     "react": "^18.3.1",
@@ -43,6 +35,7 @@
     "react-intl": "^7.1.6",
     "react-router-dom": "^7.1.5",
     "react-spreadsheet-import": "^4.7.1",
+    "reactjs-tiptap-editor": "^0.2.12",
     "recharts": "^2.15.1",
     "scss": "^0.2.4",
     "styled-components": "^5.3.10",
