--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "interactjs": "^1.10.27",
     "langs": "^2.0.0",
     "lodash": "^4.17.21",
+    "pdfjs-dist": "^5.2.133",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-error-boundary": "^5.0.0",
@@ -45,6 +46,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
+    "@types/pdfjs-dist": "^2.10.378",
     "@types/react": "^18.3.20",
     "@types/react-dom": "^18.3.6",
     "@types/styled-components": "^5.1.34",
